[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/fonts/Early GameBoy.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/fonts/gameboy_20.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/PauseMenu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 1 )

[node name="PauseMenu" type="CanvasLayer"]
pause_mode = 2
layer = 6
script = ExtResource( 3 )

[node name="Overlay" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="Overlay"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.705882 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Overlay"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Overlay/CenterContainer"]
margin_left = 272.0
margin_top = 197.0
margin_right = 752.0
margin_bottom = 402.0

[node name="Label" type="Label" parent="Overlay/CenterContainer/VBoxContainer"]
margin_right = 480.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 1 )
text = "Paused"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseButton" type="Button" parent="Overlay/CenterContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 480.0
margin_bottom = 135.0
custom_fonts/font = ExtResource( 2 )
text = "Resume"

[node name="MainMenuButton" type="Button" parent="Overlay/CenterContainer/VBoxContainer"]
margin_top = 139.0
margin_right = 480.0
margin_bottom = 170.0
custom_fonts/font = ExtResource( 2 )
text = "Main menu"

[node name="QuitButton" type="Button" parent="Overlay/CenterContainer/VBoxContainer"]
margin_top = 174.0
margin_right = 480.0
margin_bottom = 205.0
custom_fonts/font = ExtResource( 2 )
text = "Exit"
[connection signal="pressed" from="Overlay/CenterContainer/VBoxContainer/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="Overlay/CenterContainer/VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="Overlay/CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
